<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en-rUS">
    <string name="repo" translatable="false">Sloweneuh/Dantotsu</string>
    <string name="app_name" translatable="false">Dantotsu</string>
    <string name="slogan">The NEW Best Anime &amp; Manga app for Android.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="github" translatable="false">https://github.com/Sloweneuh/Dantotsu</string>
    <string name="anilist_link">https://anilist.co/user/%1$s/</string>
    <string name="myanilist_link">https://myanimelist.net/profile/%1$s/</string>
    <string name="discord_link">https://discord.com/users/%1$s/</string>
    <string name="home">Home</string>
    <string name="anime">Anime</string>
    <string name="browse_anime">Browse Anime</string>
    <string name="manga">Manga</string>
    <string name="browse_manga">Browse Manga</string>
    <string name="novels">Novels</string>
    <string name="info">Info</string>
    <string name="watch">Watch</string>
    <string name="read">Read</string>
    <string name="language">Language</string>
    <string name="language_code" translatable="false">LANG</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="sad">X(</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="search_settings">Search settings</string>
    <string name="settings_search_no_results">No matching settings found</string>
    <string name="shortcut_search_type">Search %1$s</string>
    <string name="shortcut_pin_unsupported">Your launcher can\'t add shortcuts to the home screen</string>
    <string name="shortcut_search_pin_hint">Long-press a search type to add it to your home screen</string>
    <string-array name="sort_by">
        <item>Score</item>
        <item>Popular</item>
        <item>Trending</item>
        <item>New Releases</item>
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Pure pain</item>
    </string-array>
    <string name="top_score">Top Score</string>
    <string name="updated">Recently Updated</string>
    <string name="popular_anime">Popular Anime</string>
    <string name="trending_manga">Trending Manga</string>
    <string name="trending_novel">Trending Novel</string>
    <string name="popular_manga">Popular Manga</string>
    <string name="username">Username</string>
    <string name="chapters_read">Chapters Read</string>
    <string name="chapters_read_n">Chapters\nRead</string>
    <string name="episodes_watched">Episodes Watched</string>
    <string name="episodes_watched_n">Episodes\nWatched</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="recommended">Recommended</string>
    <string name="category_recommendations">Category Recommendations</string>
    <string name="unread_chapters">Unread Chapters</string>
    <string name="no_unread_chapters">No unread chapters</string>
    <string name="error_fetching_unread_chapters">Couldn\'t fetch unread chapters</string>
    <string name="malsync_disabled_home">MALSync disabled — enable MALSync in Accounts to see unread chapters</string>
    <string name="malsync_anime_only_home">MALSync set to anime-only — enable manga checks in Accounts to see unread chapters</string>
    <string name="notification_new_chapter_title">New Chapter Available</string>
    <string name="notification_new_episode_title">New Episode Available</string>
    <string name="notification_unknown_source">Unknown source</string>
    <string name="notification_source_subtext">Source: %1$s</string>
    <string name="get_recommendations">Watch/Read some Anime or Manga to get Recommendations</string>
    <string name="empty">All caught up, when New?</string>
    <string name="action_settings">Settings</string>
    <string name="add_list">Add to List</string>
    <string name="list_editor">List Editor</string>
    <string name="notifications">Notifications</string>
    <string-array name="keys">
        <item>Reading</item>
        <item>Watching</item>
        <item>Completed</item>
        <item>Paused</item>
        <item>Dropped</item>
        <item>Planning</item>
        <item>Favourites</item>
        <item>Rewatching</item>
        <item>Rereading</item>
        <item>All</item>
    </string-array>
    <string name="nothing_here">Nothing here</string>
    <string name="followers">Followers</string>
    <string name="write_a_message">Write a Message</string>
    <string-array name="status" translatable="false">
        <item>PLANNING</item>
        <item>CURRENT</item>
        <item>COMPLETED</item>
        <item>REPEATING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="status_anime">
        <item>PLANNING</item>
        <item>WATCHING</item>
        <item>COMPLETED</item>
        <item>RE-WATCHING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="status_manga">
        <item>PLANNING</item>
        <item>READING</item>
        <item>COMPLETED</item>
        <item>RE-READING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string name="progress">PROGRESS</string>
    <string name="score">SCORE</string>
    <string name="score_suffix">" / 10"</string>
    <string name="started_at">STARTED AT</string>
    <string name="completed_at">COMPLETED AT</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="name">Name</string>
    <string name="name_romaji">Name Romaji</string>
    <string name="mean_score">Mean Score</string>
    <string name="format">Format</string>
    <string name="status_title">Status</string>
    <string name="translation">Translation</string>
    <string name="total_eps">Total Episodes</string>
    <string name="total_chaps">Total Chapters</string>
    <string name="latest_chapter">Latest Chapter</string>
    <string name="latest_episode">Latest Episode</string>
    <string name="ext_reader_no_tracking_title">No Progress Tracking</string>
    <string name="ext_reader_no_tracking_message">Chapters read here won\'t update your progress on AniList or MangaUpdates.</string>
    <string name="ext_reader_no_tracking_dismiss">Don\'t show this again</string>
    <string name="final_chapter">Final Chapter</string>
    <string name="ep_duration">Average Duration</string>
    <string name="season">Season</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="source">Source</string>
    <string name="main_studio">Studio</string>
    <string name="genres">Genres</string>
    <string name="description">Synopsis</string>
    <string name="characters">Characters</string>
    <string name="relations">Relations</string>
    <string name="staff">Staff</string>
    <string name="favourites">Favourites</string>
    <string name="popularity">Popularity</string>
    <string name="roles">Roles</string>
    <string name="details">Details</string>
    <string name="play_yt">Play on Youtube</string>
    <string name="eps">Episodes</string>
    <string name="chaps">Chapters</string>
    <string name="wrong"><u>Wrong Title?</u></string>
    <string name="source_not_found">
        Nothing came up from this source.\n
        Let\'s look elsewhere.
    </string>
    <string name="search_no_results">No results found for your query.</string>
    <string name="search_fetch_error">Couldn\'t fetch results. Check your connection or test the source, then try again.</string>
    <string name="download_not_found">
        Your downloads are feeling a bit lonely…\n
        Try downloading something.
    </string>
    <string name="not_supported">%1$s is not supported!</string>
    <string name="server_selector">Select Server</string>
    <string name="auto_select_server">Auto Selecting Server</string>
    <string name="make_default">Make Default</string>
    <string name="filler">Filler</string>
    <string name="list_only">List Only</string>
    <string name="tags">Tags</string>
    <string name="synonyms">Synonyms</string>
    <string name="trailer">Trailer</string>
    <string name="opening">Opening</string>
    <string name="ending">Ending</string>
    <string name="prequel">Prequel</string>
    <string name="sequel">Sequel</string>
    <string name="anilist_settings">Anilist Settings</string>
    <string name="mangaupdates_account_help">How does MangaUpdates work\?</string>
    <string name="myanimelist">MyAnimeList</string>
    <string name="mal_not_logged_in_title">MyAnimeList Not Connected</string>
    <string name="mal_not_logged_in_desc">Connect your MyAnimeList account to view information from MAL</string>
    <string name="connect_to_mal">Login to MyAnimeList</string>
    <string name="quick_search">Quick Search</string>
    <string name="open_on_mal">Open on MyAnimeList</string>
    <string name="screenshot_show_media_info">Show media info</string>
    <string name="screenshot_show_user_info">Show user info</string>
    <string name="screenshot_show_app_icon">Show app logo</string>
    <string name="screenshot_show_frame">Frame</string>
    <string name="screenshot_show_rounded_corners">Rounded corners</string>
    <string name="screenshot_show_date">Show date</string>
    <string name="screenshot_show_source">Show source</string>
    <string name="screenshot_caption_hint">Add a caption…</string>
    <string name="screenshot_title_label">Title</string>
    <string name="upcoming">Upcoming</string>
    <string name="anime_watched">Anime\nWatched</string>
    <string name="manga_read">Manga\nRead</string>
    <string name="widget_stats_title">Your stats</string>
    <string name="widget_this_week">This week</string>
    <string name="widget_today">Today</string>
    <string name="widget_tomorrow">Tomorrow</string>
    <string name="widget_preview_title" translatable="false">Frieren: Beyond Journey\'s End</string>
    <string name="widget_preview_title_two" translatable="false">Vinland Saga</string>
    <string name="widget_preview_title_three" translatable="false">One Piece</string>
    <string name="widget_preview_title_four" translatable="false">Attack on Titan</string>
    <string name="widget_preview_title_five" translatable="false">Jujutsu Kaisen</string>
    <string name="widget_preview_subtitle">Ep 12 in 2 days</string>
    <string name="widget_preview_subtitle_two">Ep 4 in 6 hours</string>
    <string name="widget_preview_stat_value">248</string>
    <string name="widget_preview_stat_value_two">3,517</string>
    <string name="widget_preview_stat_value_three">126</string>
    <string name="widget_preview_stat_value_four">8,904</string>
    <string name="widget_preview_time_one" translatable="false">09:30</string>
    <string name="widget_preview_time_two" translatable="false">18:30</string>
    <string name="widget_preview_time_three" translatable="false">21:00</string>
    <string name="widget_preview_time_four" translatable="false">17:00</string>
    <string name="widget_preview_time_five" translatable="false">23:00</string>
</resources>