<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.58"
        android:contentDescription="@string/myanimelist"
        app:srcCompat="@drawable/ic_myanimelist" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/mal_not_logged_in_title"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:alpha="0.58"
        android:text="@string/mal_not_logged_in_desc"
        android:textAlignment="center"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/connectMalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_mal"
        app:icon="@drawable/ic_myanimelist" />

</LinearLayout>

